--- a/SpaghettiTools.uplugin
+++ b/SpaghettiTools.uplugin
@@ -20,5 +20,11 @@
 			"Type": "Editor",
 			"LoadingPhase": "PostEngineInit"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "CommonUI",
+			"Enabled": true
+		}
 	]
 }
